Update template layouts and strip out unused

--- a/templates/page-no-title.html
+++ b/templates/page-no-title.html
@@ -1,9 +1,16 @@
-<!-- wp:template-part {"slug":"header","area":"header","tagName":"header"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header","area":"header"} /-->
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0"}}}} -->
-<main class="wp-block-group" style="margin-top: 0">
-	<!-- wp:post-content {"lock":{"move":false,"remove":true},"layout":{"type":"constrained"}} /-->
-</main>
+<!-- wp:group {"style":{"dimensions":{"minHeight":"100px"},"spacing":{"padding":{"right":"var:preset|spacing|10","left":"var:preset|spacing|10"}}},"layout":{"type":"constrained"}} -->
+<div
+	class="wp-block-group"
+	style="
+		min-height: 100px;
+		padding-right: var(--wp--preset--spacing--10);
+		padding-left: var(--wp--preset--spacing--10);
+	"
+>
+	<!-- wp:post-content /-->
+</div>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","area":"footer","tagName":"footer"} /-->
+<!-- wp:template-part {"slug":"footer","tagName":"footer","area":"footer"} /-->
