--- a/templates/404.html
+++ b/templates/404.html
@@ -1,15 +1,58 @@
-<!-- wp:template-part {"slug":"header","area":"header","tagName":"header"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header","area":"header"} /-->
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"var:preset|spacing|50","bottom":"var:preset|spacing|50"},"blockGap":"var:preset|spacing|30"}},"layout":{"type":"constrained"}} -->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"var:preset|spacing|50","bottom":"var:preset|spacing|50"},"blockGap":"var:preset|spacing|30"}},"gradient":"gradient-2","layout":{"type":"constrained"}} -->
 <main
-	class="wp-block-group"
+	class="wp-block-group has-gradient-2-gradient-background has-background"
 	style="
 		margin-top: var(--wp--preset--spacing--50);
 		margin-bottom: var(--wp--preset--spacing--50);
 	"
 >
-	<!-- wp:pattern {"slug":"twentytwentyfour/hidden-404"} /-->
+	<!-- wp:group {"align":"wide","layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
+	<div class="wp-block-group alignwide">
+		<!-- wp:group {"style":{"spacing":{"blockGap":"0","margin":{"top":"var:preset|spacing|40","bottom":"var:preset|spacing|40"}}},"layout":{"type":"constrained"}} -->
+		<div
+			class="wp-block-group"
+			style="
+				margin-top: var(--wp--preset--spacing--40);
+				margin-bottom: var(--wp--preset--spacing--40);
+			"
+		>
+			<!-- wp:paragraph {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-2"}}},"typography":{"fontStyle":"normal","fontWeight":"500","lineHeight":"1"},"spacing":{"padding":{"top":"0px","bottom":"0px","left":"0px","right":"0px"},"margin":{"top":"0px","bottom":"0px","left":"0px","right":"0px"}}},"textColor":"accent-2","fontSize":"large","fontFamily":"heading"} -->
+			<p
+				class="has-accent-2-color has-text-color has-link-color has-heading-font-family has-large-font-size"
+				style="
+					margin-top: 0px;
+					margin-right: 0px;
+					margin-bottom: 0px;
+					margin-left: 0px;
+					padding-top: 0px;
+					padding-right: 0px;
+					padding-bottom: 0px;
+					padding-left: 0px;
+					font-style: normal;
+					font-weight: 500;
+					line-height: 1;
+				"
+			>
+				Our Club
+			</p>
+			<!-- /wp:paragraph -->
+
+			<!-- wp:heading {"fontSize":"xx-large"} -->
+			<h2 class="wp-block-heading has-xx-large-font-size">Oh No!</h2>
+			<!-- /wp:heading -->
+		</div>
+		<!-- /wp:group -->
+	</div>
+	<!-- /wp:group -->
 </main>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","area":"footer","tagName":"footer"} /-->
+<!-- wp:group {"style":{"dimensions":{"minHeight":"100px"}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group" style="min-height: 100px">
+	<!-- wp:post-content /-->
+</div>
+<!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"footer","tagName":"footer","area":"footer"} /-->
