--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,76 @@
-<!-- wp:template-part {"slug":"header","area":"header","tagName":"header"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header","area":"header"} /-->
 
-<!-- wp:group {"tagName":"main","layout":{"type":"default"}} -->
-<main class="wp-block-group">
-	<!-- wp:group {"style":{"spacing":{"padding":{"top":"0vh","bottom":"6vh"}}},"layout":{"type":"constrained"}} -->
-	<div class="wp-block-group" style="padding-top: 0vh; padding-bottom: 6vh">
-		<!-- wp:post-featured-image {"align":"wide"} /-->
-	</div>
-	<!-- /wp:group -->
+<!-- wp:group {"layout":{"type":"default"}} -->
+<div class="wp-block-group">
+	<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"},"blockGap":"0","padding":{"top":"var:preset|spacing|20","right":"var:preset|spacing|10","left":"0"}},"dimensions":{"minHeight":""}},"gradient":"gradient-2","layout":{"type":"constrained"}} -->
+	<main
+		class="wp-block-group has-gradient-2-gradient-background has-background"
+		style="
+			margin-top: 0;
+			margin-bottom: 0;
+			padding-top: var(--wp--preset--spacing--20);
+			padding-right: var(--wp--preset--spacing--10);
+			padding-left: 0;
+		"
+	>
+		<!-- wp:group {"align":"wide","layout":{"type":"flex","flexWrap":"nowrap"}} -->
+		<div class="wp-block-group alignwide">
+			<!-- wp:group {"align":"wide","style":{"spacing":{"blockGap":"0","margin":{"top":"0","bottom":"0"},"padding":{"top":"var:preset|spacing|30","bottom":"0","left":"var:preset|spacing|10","right":"var:preset|spacing|10"}},"layout":{"selfStretch":"fill","flexSize":null}},"layout":{"type":"constrained"}} -->
+			<div
+				class="wp-block-group alignwide"
+				style="
+					margin-top: 0;
+					margin-bottom: 0;
+					padding-top: var(--wp--preset--spacing--30);
+					padding-right: var(--wp--preset--spacing--10);
+					padding-bottom: 0;
+					padding-left: var(--wp--preset--spacing--10);
+				"
+			>
+				<!-- wp:paragraph {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-2"}}},"typography":{"fontStyle":"normal","fontWeight":"500","lineHeight":"1"},"spacing":{"padding":{"top":"0px","bottom":"0px","left":"0px","right":"0px"},"margin":{"top":"0px","bottom":"0px","left":"0px","right":"0px"}}},"textColor":"accent-2","fontSize":"large","fontFamily":"heading"} -->
+				<p
+					class="has-accent-2-color has-text-color has-link-color has-heading-font-family has-large-font-size"
+					style="
+						margin-top: 0px;
+						margin-right: 0px;
+						margin-bottom: 0px;
+						margin-left: 0px;
+						padding-top: 0px;
+						padding-right: 0px;
+						padding-bottom: 0px;
+						padding-left: 0px;
+						font-style: normal;
+						font-weight: 500;
+						line-height: 1;
+					"
+				>
+					Our Club
+				</p>
+				<!-- /wp:paragraph -->
 
-	<!-- wp:group {"layout":{"type":"constrained"}} -->
-	<div class="wp-block-group">
-		<!-- wp:columns {"align":"wide","style":{"spacing":{"blockGap":{"top":"1rem","left":"1rem"}}}} -->
-		<div class="wp-block-columns alignwide">
-			<!-- wp:column -->
-			<div class="wp-block-column">
-				<!-- wp:post-title {"level":1,"fontSize":"x-large"} /-->
+				<!-- wp:post-title {"level":1,"fontSize":"xx-large"} /-->
 			</div>
-			<!-- /wp:column -->
+			<!-- /wp:group -->
 
-			<!-- wp:column -->
-			<div class="wp-block-column">
-				<!-- wp:post-content {"lock":{"move":false,"remove":true},"layout":{"type":"constrained"}} /-->
-			</div>
-			<!-- /wp:column -->
+			<!-- wp:post-featured-image {"height":"250px","style":{"layout":{"selfStretch":"fit","flexSize":null}}} /-->
 		</div>
-		<!-- /wp:columns -->
+		<!-- /wp:group -->
+	</main>
+	<!-- /wp:group -->
+
+	<!-- wp:group {"style":{"dimensions":{"minHeight":"100px"},"spacing":{"padding":{"right":"var:preset|spacing|10","left":"var:preset|spacing|10"}}},"layout":{"type":"constrained"}} -->
+	<div
+		class="wp-block-group"
+		style="
+			min-height: 100px;
+			padding-right: var(--wp--preset--spacing--10);
+			padding-left: var(--wp--preset--spacing--10);
+		"
+	>
+		<!-- wp:post-content /-->
 	</div>
 	<!-- /wp:group -->
-</main>
+</div>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","area":"footer","tagName":"footer"} /-->
+<!-- wp:template-part {"slug":"footer","tagName":"footer","area":"footer"} /-->
