--- a/templates/page.html
+++ b/templates/page.html
@@ -1,25 +1,72 @@
 <!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
 
-<!-- wp:group {"tagName":"main","align":"wide","style":{"spacing":{"margin":{"top":"0","bottom":"0"},"padding":{"top":"var:preset|spacing|xx-large","bottom":"var:preset|spacing|xx-large"}}},"layout":{"type":"default"}} -->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"},"blockGap":"0","padding":{"top":"var:preset|spacing|20","right":"var:preset|spacing|10","left":"0"}},"dimensions":{"minHeight":""}},"gradient":"gradient-2","layout":{"type":"constrained"}} -->
 <main
-	class="wp-block-group alignwide"
+	class="wp-block-group has-gradient-2-gradient-background has-background"
 	style="
 		margin-top: 0;
 		margin-bottom: 0;
-		padding-top: var(--wp--preset--spacing--xx-large);
-		padding-bottom: var(--wp--preset--spacing--xx-large);
+		padding-top: var(--wp--preset--spacing--20);
+		padding-right: var(--wp--preset--spacing--10);
+		padding-left: 0;
 	"
 >
-	<!-- wp:group {"align":"full","layout":{"type":"constrained"}} -->
-	<div class="wp-block-group alignfull">
-		<!-- wp:post-title {"level":1,"fontFamily":"secondary"} /-->
+	<!-- wp:group {"align":"wide","layout":{"type":"flex","flexWrap":"nowrap"}} -->
+	<div class="wp-block-group alignwide">
+		<!-- wp:group {"align":"wide","style":{"spacing":{"blockGap":"0","margin":{"top":"0","bottom":"0"},"padding":{"top":"var:preset|spacing|30","bottom":"0","left":"var:preset|spacing|10","right":"var:preset|spacing|10"}},"layout":{"selfStretch":"fill","flexSize":null}},"layout":{"type":"constrained"}} -->
+		<div
+			class="wp-block-group alignwide"
+			style="
+				margin-top: 0;
+				margin-bottom: 0;
+				padding-top: var(--wp--preset--spacing--30);
+				padding-right: var(--wp--preset--spacing--10);
+				padding-bottom: 0;
+				padding-left: var(--wp--preset--spacing--10);
+			"
+		>
+			<!-- wp:paragraph {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-2"}}},"typography":{"fontStyle":"normal","fontWeight":"500","lineHeight":"1"},"spacing":{"padding":{"top":"0px","bottom":"0px","left":"0px","right":"0px"},"margin":{"top":"0px","bottom":"0px","left":"0px","right":"0px"}}},"textColor":"accent-2","fontSize":"large","fontFamily":"heading"} -->
+			<p
+				class="has-accent-2-color has-text-color has-link-color has-heading-font-family has-large-font-size"
+				style="
+					margin-top: 0px;
+					margin-right: 0px;
+					margin-bottom: 0px;
+					margin-left: 0px;
+					padding-top: 0px;
+					padding-right: 0px;
+					padding-bottom: 0px;
+					padding-left: 0px;
+					font-style: normal;
+					font-weight: 500;
+					line-height: 1;
+				"
+			>
+				Our Club
+			</p>
+			<!-- /wp:paragraph -->
 
-		<!-- wp:post-featured-image {"style":{"color":{"duotone":"unset"},"spacing":{"margin":{"top":"var:preset|spacing|large","right":"var:preset|spacing|large","bottom":"var:preset|spacing|large","left":"var:preset|spacing|large"}}}} /-->
+			<!-- wp:post-title {"level":1,"fontSize":"xx-large"} /-->
+		</div>
+		<!-- /wp:group -->
+
+		<!-- wp:post-featured-image {"height":"250px","style":{"layout":{"selfStretch":"fit","flexSize":null}}} /-->
 	</div>
 	<!-- /wp:group -->
-
-	<!-- wp:post-content {"align":"wide","layout":{"type":"constrained"}} /-->
 </main>
+<!-- /wp:group -->
+
+<!-- wp:group {"style":{"dimensions":{"minHeight":"100px"},"spacing":{"padding":{"right":"var:preset|spacing|10","left":"var:preset|spacing|10"}}},"layout":{"type":"constrained"}} -->
+<div
+	class="wp-block-group"
+	style="
+		min-height: 100px;
+		padding-right: var(--wp--preset--spacing--10);
+		padding-left: var(--wp--preset--spacing--10);
+	"
+>
+	<!-- wp:post-content /-->
+</div>
 <!-- /wp:group -->
 
 <!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
