--- a/templates/single.html
+++ b/templates/single.html
@@ -1,150 +1,72 @@
-<!-- wp:template-part {"slug":"header","tagName":"header","area":"header"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header","className":"site-header"} /-->
 
-<!-- wp:group {"tagName":"main","align":"full","style":{"spacing":{"padding":{"right":"0","left":"0"}}},"layout":{"type":"constrained"}} -->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"margin":{"top":"0","bottom":"0"},"blockGap":"0","padding":{"top":"var:preset|spacing|20","right":"var:preset|spacing|10","left":"0"}},"dimensions":{"minHeight":""}},"gradient":"gradient-2","layout":{"type":"constrained"}} -->
 <main
-	class="wp-block-group alignfull"
-	style="padding-right: 0; padding-left: 0"
+	class="wp-block-group has-gradient-2-gradient-background has-background"
+	style="
+		margin-top: 0;
+		margin-bottom: 0;
+		padding-top: var(--wp--preset--spacing--20);
+		padding-right: var(--wp--preset--spacing--10);
+		padding-left: 0;
+	"
 >
-	<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|10"},"margin":{"bottom":"var:preset|spacing|40"}}},"layout":{"type":"constrained"}} -->
-	<div
-		class="wp-block-group"
-		style="
-			margin-bottom: var(--wp--preset--spacing--40);
-			padding-top: var(--wp--preset--spacing--10);
-		"
-	>
-		<!-- wp:post-featured-image {"style":{"spacing":{"margin":{"bottom":"var:preset|spacing|10"}},"border":{"radius":"0px"}}} /-->
-
-		<!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|10","padding":{"top":"0","bottom":"0","left":"var:preset|spacing|10","right":"var:preset|spacing|10"}}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"stretch"}} -->
+	<!-- wp:group {"align":"wide","layout":{"type":"flex","flexWrap":"nowrap"}} -->
+	<div class="wp-block-group alignwide">
+		<!-- wp:group {"align":"wide","style":{"spacing":{"blockGap":"0","margin":{"top":"0","bottom":"0"},"padding":{"top":"var:preset|spacing|30","bottom":"0","left":"var:preset|spacing|10","right":"var:preset|spacing|10"}},"layout":{"selfStretch":"fill","flexSize":null}},"layout":{"type":"constrained"}} -->
 		<div
-			class="wp-block-group"
+			class="wp-block-group alignwide"
 			style="
-				padding-top: 0;
+				margin-top: 0;
+				margin-bottom: 0;
+				padding-top: var(--wp--preset--spacing--30);
 				padding-right: var(--wp--preset--spacing--10);
 				padding-bottom: 0;
 				padding-left: var(--wp--preset--spacing--10);
 			"
 		>
-			<!-- wp:post-title {"level":1,"fontSize":"x-large"} /-->
-
-			<!-- wp:template-part {"slug":"post-meta"} /-->
-		</div>
-		<!-- /wp:group -->
-	</div>
-	<!-- /wp:group -->
-
-	<!-- wp:group {"style":{"spacing":{"padding":{"right":"var:preset|spacing|10","left":"var:preset|spacing|10"}}},"layout":{"type":"default"}} -->
-	<div
-		class="wp-block-group"
-		style="
-			padding-right: var(--wp--preset--spacing--10);
-			padding-left: var(--wp--preset--spacing--10);
-		"
-	>
-		<!-- wp:post-content {"lock":{"move":false,"remove":false},"align":"full","layout":{"type":"default"}} /-->
-	</div>
-	<!-- /wp:group -->
-
-	<!-- wp:group {"style":{"spacing":{"margin":{"top":"var:preset|spacing|40"},"padding":{"bottom":"var:preset|spacing|50"}}},"layout":{"type":"constrained"}} -->
-	<div
-		class="wp-block-group"
-		style="
-			margin-top: var(--wp--preset--spacing--40);
-			padding-bottom: var(--wp--preset--spacing--50);
-		"
-	>
-		<!-- wp:post-terms {"term":"post_tag","separator":"  ","className":"is-style-pill"} /-->
-
-		<!-- wp:group {"layout":{"type":"constrained"}} -->
-		<div class="wp-block-group">
-			<!-- wp:spacer {"height":"var:preset|spacing|40"} -->
-			<div
-				style="height: var(--wp--preset--spacing--40)"
-				aria-hidden="true"
-				class="wp-block-spacer"
-			></div>
-			<!-- /wp:spacer -->
-
-			<!-- wp:separator {"style":{"spacing":{"margin":{"bottom":"var:preset|spacing|40"}}},"backgroundColor":"contrast-3","className":"is-style-wide"} -->
-			<hr
-				class="wp-block-separator has-text-color has-contrast-3-color has-alpha-channel-opacity has-contrast-3-background-color has-background is-style-wide"
-				style="margin-bottom: var(--wp--preset--spacing--40)"
-			/>
-			<!-- /wp:separator -->
-
-			<!-- wp:comments {"className":"wp-block-comments-query-loop"} -->
-			<div class="wp-block-comments wp-block-comments-query-loop">
-				<!-- wp:heading -->
-				<h2 class="wp-block-heading">Comments</h2>
-				<!-- /wp:heading -->
-
-				<!-- wp:comments-title {"level":3} /-->
-
-				<!-- wp:comment-template -->
-				<!-- wp:group {"style":{"spacing":{"margin":{"top":"0","bottom":"var:preset|spacing|30"}}}} -->
-				<div
-					class="wp-block-group"
-					style="
-						margin-top: 0;
-						margin-bottom: var(--wp--preset--spacing--30);
-					"
-				>
-					<!-- wp:group {"style":{"spacing":{"blockGap":"0.5em"}},"layout":{"type":"flex","flexWrap":"nowrap"}} -->
-					<div class="wp-block-group">
-						<!-- wp:avatar {"size":40} /-->
-
-						<!-- wp:group -->
-						<div class="wp-block-group">
-							<!-- wp:comment-author-name /-->
-
-							<!-- wp:comment-date /-->
-						</div>
-						<!-- /wp:group -->
-					</div>
-					<!-- /wp:group -->
-
-					<!-- wp:comment-content /-->
-
-					<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"}} -->
-					<div class="wp-block-group">
-						<!-- wp:comment-edit-link /-->
-
-						<!-- wp:comment-reply-link /-->
-					</div>
-					<!-- /wp:group -->
-				</div>
-				<!-- /wp:group -->
-				<!-- /wp:comment-template -->
-
-				<!-- wp:comments-pagination {"layout":{"type":"flex","justifyContent":"space-between"}} -->
-				<!-- wp:comments-pagination-previous /-->
-
-				<!-- wp:comments-pagination-next /-->
-				<!-- /wp:comments-pagination -->
-
-				<!-- wp:post-comments-form {"style":{"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}}} /-->
-			</div>
-			<!-- /wp:comments -->
-
-			<!-- wp:group {"tagName":"nav","style":{"spacing":{"padding":{"bottom":"var:preset|spacing|40","top":"var:preset|spacing|40"}}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
-			<nav
-				aria-label="Posts"
-				class="wp-block-group"
+			<!-- wp:paragraph {"style":{"elements":{"link":{"color":{"text":"var:preset|color|accent-2"}}},"typography":{"fontStyle":"normal","fontWeight":"500","lineHeight":"1"},"spacing":{"padding":{"top":"0px","bottom":"0px","left":"0px","right":"0px"},"margin":{"top":"0px","bottom":"0px","left":"0px","right":"0px"}}},"textColor":"accent-2","fontSize":"large","fontFamily":"heading"} -->
+			<p
+				class="has-accent-2-color has-text-color has-link-color has-heading-font-family has-large-font-size"
 				style="
-					padding-top: var(--wp--preset--spacing--40);
-					padding-bottom: var(--wp--preset--spacing--40);
+					margin-top: 0px;
+					margin-right: 0px;
+					margin-bottom: 0px;
+					margin-left: 0px;
+					padding-top: 0px;
+					padding-right: 0px;
+					padding-bottom: 0px;
+					padding-left: 0px;
+					font-style: normal;
+					font-weight: 500;
+					line-height: 1;
 				"
 			>
-				<!-- wp:post-navigation-link {"type":"previous","label":"Previous: ","showTitle":true,"linkLabel":true,"arrow":"arrow"} /-->
+				Our Club
+			</p>
+			<!-- /wp:paragraph -->
 
-				<!-- wp:post-navigation-link {"label":"Next: ","showTitle":true,"linkLabel":true,"arrow":"arrow"} /-->
-			</nav>
-			<!-- /wp:group -->
+			<!-- wp:post-title {"level":1,"fontSize":"xx-large"} /-->
 		</div>
 		<!-- /wp:group -->
+
+		<!-- wp:post-featured-image {"height":"250px","style":{"layout":{"selfStretch":"fit","flexSize":null}}} /-->
 	</div>
 	<!-- /wp:group -->
 </main>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","tagName":"footer","area":"footer"} /-->
+<!-- wp:group {"style":{"dimensions":{"minHeight":"100px"},"spacing":{"padding":{"right":"var:preset|spacing|10","left":"var:preset|spacing|10"}}},"layout":{"type":"constrained"}} -->
+<div
+	class="wp-block-group"
+	style="
+		min-height: 100px;
+		padding-right: var(--wp--preset--spacing--10);
+		padding-left: var(--wp--preset--spacing--10);
+	"
+>
+	<!-- wp:post-content /-->
+</div>
+<!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"footer","tagName":"footer","className":"site-footer"} /-->
