Minor layout fixes

--- a/templates/404.html
+++ b/templates/404.html
@@ -49,8 +49,11 @@
 </main>
 <!-- /wp:group -->
 
-<!-- wp:group {"style":{"dimensions":{"minHeight":"100px"}},"layout":{"type":"constrained"}} -->
-<div class="wp-block-group" style="min-height: 100px">
+<!-- wp:group {"style":{"dimensions":{"minHeight":"100px"},"spacing":{"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"constrained"}} -->
+<div
+	class="wp-block-group"
+	style="min-height: 100px; margin-top: 0; margin-bottom: 0"
+>
 	<!-- wp:post-content /-->
 </div>
 <!-- /wp:group -->
