--- a/templates/page.html
+++ b/templates/page.html
@@ -56,12 +56,14 @@
 </main>
 <!-- /wp:group -->
 
-<!-- wp:group {"style":{"dimensions":{"minHeight":"100px"},"spacing":{"padding":{"right":"var:preset|spacing|10","left":"var:preset|spacing|10"}}},"layout":{"type":"constrained"}} -->
+<!-- wp:group {"style":{"dimensions":{"minHeight":"100px"},"spacing":{"padding":{"right":"var:preset|spacing|10","left":"var:preset|spacing|10","top":"var:preset|spacing|30","bottom":"var:preset|spacing|30"}}},"layout":{"type":"constrained"}} -->
 <div
 	class="wp-block-group"
 	style="
 		min-height: 100px;
+		padding-top: var(--wp--preset--spacing--30);
 		padding-right: var(--wp--preset--spacing--10);
+		padding-bottom: var(--wp--preset--spacing--30);
 		padding-left: var(--wp--preset--spacing--10);
 	"
 >
