--- a/templates/single-team.html
+++ b/templates/single-team.html
@@ -56,11 +56,13 @@
 </main>
 <!-- /wp:group -->
 
-<!-- wp:group {"style":{"dimensions":{"minHeight":"100px"},"spacing":{"padding":{"right":"var:preset|spacing|10","left":"var:preset|spacing|10"}}},"layout":{"type":"constrained"}} -->
+<!-- wp:group {"style":{"dimensions":{"minHeight":"100px"},"spacing":{"padding":{"right":"var:preset|spacing|10","left":"var:preset|spacing|10"},"margin":{"top":"var:preset|spacing|30","bottom":"var:preset|spacing|30"}}},"layout":{"type":"constrained"}} -->
 <div
 	class="wp-block-group"
 	style="
 		min-height: 100px;
+		margin-top: var(--wp--preset--spacing--30);
+		margin-bottom: var(--wp--preset--spacing--30);
 		padding-right: var(--wp--preset--spacing--10);
 		padding-left: var(--wp--preset--spacing--10);
 	"
